Beta 1.1 - split into two parts

--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -18,6 +18,7 @@
 @import "modules/banner/prototype";
 @import "modules/controls/breadcrumbs";
 @import "modules/controls/buttons";
+@import "modules/controls/tabs";
 @import "modules/data/table";
 @import "modules/disclosure/details";
 @import "modules/footer-global/footer";
