--- a/app/assets/sass/modules/header-global/_header-global.scss
+++ b/app/assets/sass/modules/header-global/_header-global.scss
@@ -29,10 +29,12 @@
 
 .service-name {
   display: block;
+  font-size: $smallprint;
   color: $grey-1;
 
   @include media(mid) {
     display: inline;
+    font-size: $body;
     margin-left: $leading;
     line-height: 32px;
   }
