--- a/app/assets/sass/modules/header-local/_header-panel-local.scss
+++ b/app/assets/sass/modules/header-local/_header-panel-local.scss
@@ -20,5 +20,5 @@
 .content-seperator {
   width: 130px;
   height: $leading/4;
-  background-color: tint($nhs-blue, 20%);
+  background-color: $nhs-blue;
 }
