--- a/app/assets/sass/modules/section-indicator/_section-indicator.scss
+++ b/app/assets/sass/modules/section-indicator/_section-indicator.scss
@@ -1,7 +1,8 @@
 .section-indicator {
-
   color: $grey-1;
+  padding-top: $leading/2;
 
   @include media(mid) {
+    padding-top: $leading;
   }
 }
