--- a/app/assets/sass/variables/_frutiger.scss
+++ b/app/assets/sass/variables/_frutiger.scss
@@ -1,5 +1,5 @@
-@import url('//fast.fonts.net/cssapi/4c65968f-c33e-4eb6-9a5d-ab4f81a0543f.css');
-$family: "Neue Frutiger W01", sans-serif;
+/*@import url('//fast.fonts.net/cssapi/4c65968f-c33e-4eb6-9a5d-ab4f81a0543f.css');
+$family: "Neue Frutiger W01", sans-serif;*/
 
 // For offline / train dev:
-//$family: "Frutiger Neue", "Frutiger", sans-serif;
+$family: "Frutiger Neue", "Frutiger", sans-serif;
