--- a/app/views/private_beta_v1_1/any-allergies.html
+++ b/app/views/private_beta_v1_1/any-allergies.html
@@ -47,8 +47,8 @@
       {% if session.health.medication === 'yes' %}
         {% set back = 'current-medication-details' %}
       {% endif %}
-      {% if session.edit == true %}
-        {% set back = 'confirm-details' %}
+      {% if session.edit != false %}
+        {% set back = 'check-your-answers' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
     </div>
