--- a/app/views/private_beta_v1_1/history.html
+++ b/app/views/private_beta_v1_1/history.html
@@ -52,8 +52,8 @@
         {% if session.health.allergies === 'yes' %}
           {% set back = 'allergies-details' %}
         {% endif %}
-        {% if session.edit == true %}
-          {% set back = 'confirm-details' %}
+        {% if session.edit != false %}
+          {% set back = 'check-your-answers' %}
         {% endif %}
         <a href="{{ back }}" class="button -back">Back</a>
       </div>
