--- a/app/views/private_beta_v1_1/home-address-manual.html
+++ b/app/views/private_beta_v1_1/home-address-manual.html
@@ -63,8 +63,8 @@
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
       {% set back = 'javascript:window.history.back();' %}
-      {% if session.edit == true %}
-        {% set back = 'confirm-details' %}
+      {% if session.edit != false %}
+        {% set back = 'check-your-details' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
     </div>
