--- a/app/assets/sass/modules/controls/_buttons.scss
+++ b/app/assets/sass/modules/controls/_buttons.scss
@@ -77,7 +77,7 @@
 
   &.-bordered {
     border: 2px solid rgba($grey-3, 0.5);
-    background-color: rgba($grey-3, 0.1);
+    background-color: $white;
     padding: 2px $leading/2;
     color: $nhs-blue;
     margin-right: $leading/4;
@@ -86,6 +86,7 @@
   }
   &.-bordered:hover {
     background-color: $grey-3;
+    color: $white;
   }
 
   &.-small {
