--- a/app/assets/sass/modules/disclosure/_details.scss
+++ b/app/assets/sass/modules/disclosure/_details.scss
@@ -13,4 +13,35 @@ details {
       box-shadow: 0 0 0 5px $focus-colour;
     }
   }
+
+  &.-inline {
+    margin: inherit;
+
+    summary {
+      color: $black;
+      text-decoration: none;
+      cursor: default;
+
+      .details-cta {
+        text-decoration: underline;
+        cursor: pointer;
+      }
+
+      &::-webkit-details-marker {
+        display: none;
+      }
+
+      &:focus {
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+
+        .details-cta {
+          -webkit-box-shadow: 0 0 0 5px $focus-colour;
+          -moz-box-shadow: 0 0 0 5px $focus-colour;
+          box-shadow: 0 0 0 5px $focus-colour;
+        }
+      }
+    }
+  }
 }
