--- a/app/assets/sass/modules/forms/_fieldset.scss
+++ b/app/assets/sass/modules/forms/_fieldset.scss
@@ -1,8 +1,12 @@
 fieldset {
   border: 0;
   padding: 0.01em 0 0 0;
-  margin: 0 0 $leading*2 0;
+  margin: 0;
   min-width: 0;
+
+  @include media(mid) {
+    margin-bottom: $leading*2;
+  }
 
   body:not(:-moz-handler-blocked) & {
     display: table-cell;
