--- a/app/assets/sass/modules/signage/_info.scss
+++ b/app/assets/sass/modules/signage/_info.scss
@@ -1,13 +1,17 @@
 .signage {
   @extend %contain-floats;
-  margin: $leading*2 0;
+  margin: $leading 0;
+
+  @include media(mid) {
+    margin: $leading*2 0;
+  }
 
   & > div {
     float: left;
-    padding: 0 $leading;
+    padding: $leading;
 
     @include media(mid) {
-      padding: 0 $leading*2;
+      padding: $leading*2;
     }
   }
 }
@@ -35,5 +39,10 @@
 }
 
 .subtle-push {
-  border: 2px solid tint($nhs-blue, 50);
+  border-left: 2px solid $grey-3;
+
+  & > div {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 }
