--- a/app/views/private_beta_v1_1/date-of-birth.html
+++ b/app/views/private_beta_v1_1/date-of-birth.html
@@ -12,7 +12,7 @@
 {% block content %}
 
   {% include "_includes/section-indicator-1.html" %}
-  
+
   <form method="post">
     <fieldset>
       <legend class="primary">
@@ -49,8 +49,8 @@
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
       {% set back = 'name' %}
-      {% if session.edit == true %}
-        {% set back = 'confirm-details' %}
+      {% if session.edit != false %}
+        {% set back = 'check-your-details' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
     </div>
