--- a/app/views/private_beta_v1_1/home-address-postcode.html
+++ b/app/views/private_beta_v1_1/home-address-postcode.html
@@ -57,8 +57,8 @@
     <div class="form-group -controls">
       <button type="submit" class="button">Find address</button>
       {% set back = 'date-of-birth' %}
-      {% if session.edit == true %}
-        {% set back = 'confirm-details' %}
+      {% if session.edit != false %}
+        {% set back = 'check-your-details' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
     </div>
