--- a/app/views/private_beta_v1_1/registered-address-result.html
+++ b/app/views/private_beta_v1_1/registered-address-result.html
@@ -16,22 +16,12 @@
   <form action="select-registered-address" method="post">
     <fieldset>
       <legend class="primary">
-        What was your address?
+        {% if session.currentgp.registeredaddressresults.length == 1 %}
+          Confirm your registered address
+        {% else %}
+          Select your registered address
+        {% endif %}
       </legend>
-
-      <table class="natural compact">
-        <tr>
-          {% if session.currentgp.registeredaddress.building !== '' %}
-            <th>Number:</th>
-            <td>{{ session.currentgp.registeredaddress.building | title }}</td>
-          {% endif %}
-          <th>Postcode:</th>
-          <td>{{ session.currentgp.registeredaddress.postcode | upper }}</td>
-          <td class="control" rowspan="2">
-            <a href="registered-address-postcode">change</a>
-          </td>
-        </tr>
-      </table>
 
       {% if message %}
         <div class="signage measure">
@@ -69,7 +59,13 @@
     </fieldset>
 
     <p>
-      <a href="registered-address-manual">I can’t find my address</a>
+      <a href="registered-address-postcode">
+        {% if session.currentgp.registeredaddressresults.length == 1 %}
+          This isn’t my registered address
+        {% else %}
+          I can’t find my registered address
+        {% endif %}
+      </a>
     </p>
 
     <div class="form-group -controls">
