--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,4 +1,3 @@
-@import url("//fast.fonts.net/cssapi/4c65968f-c33e-4eb6-9a5d-ab4f81a0543f.css");
 .prototype-warning-inner, .breadcrumb, .footer-container, .-date, .error-summary, form, .form-group, #global-header, .signage, .nhsid-container, .header-container,
 .content, .grid-row {
   zoom: 1;
@@ -11,10 +10,12 @@
   clear: both;
 }
 
+/*@import url('//fast.fonts.net/cssapi/4c65968f-c33e-4eb6-9a5d-ab4f81a0543f.css');
+$family: "Neue Frutiger W01", sans-serif;*/
 body, pre.user-input,
 .body {
   color: #231f20;
-  font-family: "Neue Frutiger W01", sans-serif;
+  font-family: "Frutiger Neue", "Frutiger", sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 32px;
@@ -30,20 +31,18 @@ h1, .heading-xxlarge, .primary,
   font-size: 28px;
   font-weight: 400;
   line-height: 48px;
+  /*
+  @include media(large) {
+    font-size: 36px;
+    line-height: $leading*4;
+  }
+*/
 }
 
 @media (min-width: 500px) {
   h1, .heading-xxlarge, .primary,
   .h1 {
     font-size: 32px;
-    line-height: 64px;
-  }
-}
-
-@media (min-width: 980px) {
-  h1, .heading-xxlarge, .primary,
-  .h1 {
-    font-size: 36px;
     line-height: 64px;
   }
 }
@@ -87,7 +86,8 @@ h6 a {
   color: #918f90;
 }
 
-p {
+p,
+.p {
   margin: 32px 0 32px 0;
 }
 
@@ -268,7 +268,7 @@ a:focus {
 
 .button.-bordered {
   border: 2px solid rgba(174, 183, 189, 0.5);
-  background-color: rgba(174, 183, 189, 0.1);
+  background-color: #fff;
   padding: 2px 8px;
   color: #005eb8;
   margin-right: 4px;
@@ -277,6 +277,7 @@ a:focus {
 
 .button.-bordered:hover {
   background-color: #aeb7bd;
+  color: #fff;
 }
 
 .button.-small {
@@ -284,6 +285,35 @@ a:focus {
   margin-top: 8px;
   font-size: 16px;
   line-height: 24px;
+}
+
+.tabbed {
+  border-bottom: 1px solid #768692;
+  padding-bottom: 16px;
+  margin-bottom: 16px;
+}
+
+@media (min-width: 500px) {
+  .tabbed {
+    padding-bottom: 0;
+  }
+}
+
+@media (min-width: 500px) {
+  .tabbed > .tab {
+    display: inline-block;
+    padding: 16px;
+    border: 1px solid #fff;
+    border-bottom: 1px solid #768692;
+    margin-bottom: -1px;
+  }
+}
+
+@media (min-width: 500px) {
+  .tabbed .active {
+    border: 1px solid #768692;
+    border-bottom: 1px solid #fff;
+  }
 }
 
 table {
@@ -397,6 +427,37 @@ details summary:focus {
   box-shadow: 0 0 0 5px #ffb81c;
 }
 
+details.-inline {
+  margin: inherit;
+}
+
+details.-inline summary {
+  color: #231f20;
+  text-decoration: none;
+  cursor: default;
+}
+
+details.-inline summary .details-cta {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+details.-inline summary::-webkit-details-marker {
+  display: none;
+}
+
+details.-inline summary:focus {
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+
+details.-inline summary:focus .details-cta {
+  -webkit-box-shadow: 0 0 0 5px #ffb81c;
+  -moz-box-shadow: 0 0 0 5px #ffb81c;
+  box-shadow: 0 0 0 5px #ffb81c;
+}
+
 html {
   background-color: #aeb7bd;
 }
@@ -469,8 +530,14 @@ html {
 fieldset {
   border: 0;
   padding: 0.01em 0 0 0;
-  margin: 0 0 32px 0;
+  margin: 0;
   min-width: 0;
+}
+
+@media (min-width: 500px) {
+  fieldset {
+    margin-bottom: 32px;
+  }
 }
 
 body:not(:-moz-handler-blocked) fieldset, pre.user-input:not(:-moz-handler-blocked) fieldset {
@@ -520,7 +587,7 @@ input[type='password'] {
   -webkit-box-sizing: border-box;
   display: block;
   width: 100%;
-  margin: 16px 0 32px 0;
+  margin: 8px 0 16px 0;
   padding: 8px;
   border: 2px solid #005eb8;
   font-family: inherit;
@@ -536,6 +603,7 @@ input[type='password'] {
   input[type='email'],
   input[type='password'] {
     width: 75%;
+    margin: 16px 0 32px 0;
   }
 }
 
@@ -572,7 +640,13 @@ input::-webkit-inner-spin-button {
 .-hanging-hint .form-hint {
   float: left;
   clear: none;
-  padding: 10px 0 10px 16px;
+  margin: 0;
+}
+
+@media (min-width: 500px) {
+  .-hanging-hint .form-hint {
+    padding: 26px 0 10px 16px;
+  }
 }
 
 label {
@@ -584,11 +658,17 @@ label {
 .form-hint {
   display: block;
   clear: both;
-  margin: 16px 0 32px 0;
+  margin: 16px 0;
   font-size: 16px;
   font-weight: 400;
   line-height: 32px;
   color: #5C6770;
+}
+
+@media (min-width: 500px) {
+  .form-hint {
+    margin-bottom: 32px;
+  }
 }
 
 label .form-hint {
@@ -981,12 +1061,14 @@ textarea:focus {
 
 .service-name {
   display: block;
+  font-size: 16px;
   color: #425563;
 }
 
 @media (min-width: 500px) {
   .service-name {
     display: inline;
+    font-size: 20px;
     margin-left: 16px;
     line-height: 32px;
   }
@@ -1016,25 +1098,38 @@ textarea:focus {
 .content-seperator {
   width: 130px;
   height: 4px;
-  background-color: #337ec6;
+  background-color: #005eb8;
 }
 
 .section-indicator {
   color: #425563;
+  padding-top: 8px;
+}
+
+@media (min-width: 500px) {
+  .section-indicator {
+    padding-top: 16px;
+  }
 }
 
 .signage {
-  margin: 32px 0;
+  margin: 16px 0;
+}
+
+@media (min-width: 500px) {
+  .signage {
+    margin: 32px 0;
+  }
 }
 
 .signage > div {
   float: left;
-  padding: 0 16px;
+  padding: 16px;
 }
 
 @media (min-width: 500px) {
   .signage > div {
-    padding: 0 32px;
+    padding: 32px;
   }
 }
 
@@ -1061,7 +1156,12 @@ textarea:focus {
 }
 
 .subtle-push {
-  border: 2px solid #80afdc;
+  border-left: 2px solid #aeb7bd;
+}
+
+.subtle-push > div {
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .nhsid-container {
@@ -1118,8 +1218,10 @@ body, pre.user-input {
   }
 }
 
-.content {
-  padding-top: 32px;
+@media (min-width: 500px) {
+  .content {
+    padding-top: 32px;
+  }
 }
 
 @media (min-width: 640px) {
