Skeleton setup for 1.2

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,6 +8,13 @@
   <ul>
     <li>
       <p>
+        <a href="/private-beta-v1.2/start">Private beta, v1.2</a><br>
+        Expand both sections to incorporate <b>lots</b> more questions.<br>
+        To explore volume and size of transactional flow.
+      </p>
+    </li>
+    <li>
+      <p>
         <a href="/private-beta-v1.1/start">Private beta, v1.1</a><br>
         Split flow into two sections: ‘details’ and ‘health info’
       </p>
