--- a/app/views/private_beta_v1_2/start.html
+++ b/app/views/private_beta_v1_2/start.html
@@ -42,7 +42,9 @@
       Your details
     </h2>
 
-    <h3 class="body p">You’ll need to provide:</h3>
+    <h3 class="body p">
+      You’ll need to provide information about yourself including:
+    </h3>
 
     <ul>
       <li>your name and date of birth</li>
