Add a 'title' field to 'name'

--- a/app/views/private_beta_v1_2/check-your-details.html
+++ b/app/views/private_beta_v1_2/check-your-details.html
@@ -33,7 +33,7 @@
   <table class="measure">
     <tr>
       <th scope="row">Name</th>
-      <td>{{ session.name.firstName | title }} {{ session.name.middleNames | title }} {{ session.name.lastName | title }}</td>
+      <td>{{ session.name.title }} {{ session.name.firstName | title }} {{ session.name.middleNames | title }} {{ session.name.lastName | title }}</td>
       <td class="control">
         <a href="name" class="button -secondary">Change</a>
       </td>
