--- a/app/views/private_beta_v1_2/name.html
+++ b/app/views/private_beta_v1_2/name.html
@@ -27,17 +27,21 @@
     {% endif %}
 
     <fieldset>
+      <div class="form-group">
+        <label for="title">Title</label>
+        <input class="-small" autocomplete="off" type="text" id="title" name="title" value="{{ session.name.title }}">
+      </div>
       <div class="form-group {% if error %}-errors{% endif %}">
         <label for="first-name">First name</label>
-        <input autocomplete="off" type="text" id="first-name" name="first-name" value="{{ first }}">
+        <input autocomplete="off" type="text" id="first-name" name="first-name" value="{{ session.name.firstName }}">
       </div>
       <div class="form-group">
         <label for="middle-names">Middle names</label>
-        <input autocomplete="off" type="text" id="middle-names" name="middle-names" value="{{ middle }}">
+        <input autocomplete="off" type="text" id="middle-names" name="middle-names" value="{{ session.name.middleNames }}">
       </div>
       <div class="form-group {% if error %}-errors{% endif %}">
         <label for="last-name">Last name</label>
-        <input autocomplete="off" type="text" id="last-name" name="last-name" value="{{ last }}">
+        <input autocomplete="off" type="text" id="last-name" name="last-name" value="{{ session.name.lastName }}">
       </div>
     </fieldset>
 
