Remove hanging 'optional' hints

--- a/app/views/private_beta_v1_2/contact-email.html
+++ b/app/views/private_beta_v1_2/contact-email.html
@@ -19,9 +19,8 @@
       <label for="email">What is your email address?</label>
     </h1>
 
-    <div class="form-group -hanging-hint">
+    <div class="form-group">
       <input autocomplete="off" type="email" id="email" name="email" value="{{ session.contact.email }}" style="float: left;">
-      <span class="form-hint">(optional)</span>
     </div>
 
     <details>
