Use a 'mid-start' page instead of splitting 'check answers' into two

--- a/app/views/private_beta_v1_1/armed-forces-service-number.html
+++ b/app/views/private_beta_v1_1/armed-forces-service-number.html
@@ -27,7 +27,7 @@
       <button type="submit" class="button">Continue</button>
       {% set back = 'armed-forces' %}
       {% if session.edit != false %}
-        {% set back = 'check-your-details' %}
+        {% set back = 'check-your-answers' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
     </div>
