--- a/app/views/private_beta_v1_1/current-gp.html
+++ b/app/views/private_beta_v1_1/current-gp.html
@@ -48,7 +48,7 @@
         {% set back = 'armed-forces-enlistment-date' %}
       {% endif %}
       {% if session.edit != false %}
-        {% set back = 'check-your-details' %}
+        {% set back = 'check-your-answers' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
     </div>
