--- a/app/views/private_beta_v1_1/registered-address-postcode.html
+++ b/app/views/private_beta_v1_1/registered-address-postcode.html
@@ -57,7 +57,7 @@
       <button type="submit" class="button">Find address</button>
       {% set back = 'registered-address' %}
       {% if session.edit != false %}
-        {% set back = 'check-your-details' %}
+        {% set back = 'check-your-answers' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
     </div>
