--- a/app/views/private_beta_v1_1/armed-forces-enlistment-date.html
+++ b/app/views/private_beta_v1_1/armed-forces-enlistment-date.html
@@ -43,7 +43,7 @@
       <button type="submit" class="button">Continue</button>
       {% set back = 'armed-forces-service-number' %}
       {% if session.edit != false %}
-        {% set back = 'check-your-details' %}
+        {% set back = 'check-your-answers' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
     </div>
