--- a/app/views/private_beta_v1_1/armed-forces.html
+++ b/app/views/private_beta_v1_1/armed-forces.html
@@ -60,7 +60,7 @@
       <button type="submit" class="button">Continue</button>
       {% set back = 'contact-telephone' %}
       {% if session.edit != false %}
-        {% set back = 'check-your-details' %}
+        {% set back = 'check-your-answers' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
     </div>
