--- a/app/views/private_beta_v1_1/contact-telephone.html
+++ b/app/views/private_beta_v1_1/contact-telephone.html
@@ -41,7 +41,7 @@
       <button type="submit" class="button">Continue</button>
       {% set back = 'contact-email' %}
       {% if session.edit != false %}
-        {% set back = 'check-your-details' %}
+        {% set back = 'check-your-answers' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
     </div>
