--- a/app/views/private_beta_v1_1/current-medication.html
+++ b/app/views/private_beta_v1_1/current-medication.html
@@ -58,7 +58,7 @@
       {% endif %}
       {% if session.edit != false %}
         {% if session.edit == 'part-one' %}
-          {% set back = 'check-your-details' %}
+          {% set back = 'check-your-answers' %}
         {% else %}
           {% set back = 'check-your-answers' %}
         {% endif %}
