--- a/app/views/private_beta_v1_1/date-of-birth.html
+++ b/app/views/private_beta_v1_1/date-of-birth.html
@@ -50,7 +50,7 @@
       <button type="submit" class="button">Continue</button>
       {% set back = 'name' %}
       {% if session.edit != false %}
-        {% set back = 'check-your-details' %}
+        {% set back = 'check-your-answers' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
     </div>
