--- a/app/views/private_beta_v1_1/name.html
+++ b/app/views/private_beta_v1_1/name.html
@@ -45,7 +45,7 @@
       <button type="submit" class="button">Continue</button>
       {% set back = 'start' %}
       {% if session.edit != false %}
-        {% set back = 'check-your-details' %}
+        {% set back = 'check-your-answers' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
     </div>
