--- a/app/views/private_beta_v1_1/nhs-number.html
+++ b/app/views/private_beta_v1_1/nhs-number.html
@@ -71,7 +71,7 @@
         {% endif %}
       {% endif %}
       {% if session.edit != false %}
-        {% set back = 'check-your-details' %}
+        {% set back = 'check-your-answers' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
     </div>
