--- a/app/views/private_beta_v1_1/registered-address.html
+++ b/app/views/private_beta_v1_1/registered-address.html
@@ -58,7 +58,7 @@
       <button type="submit" class="button">Continue</button>
       {% set back = 'current-gp-lookup' %}
       {% if session.edit != false %}
-        {% set back = 'check-your-details' %}
+        {% set back = 'check-your-answers' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
     </div>
