Tweak start page content

--- a/app/views/private_beta_v1_1/part-two-start.html
+++ b/app/views/private_beta_v1_1/part-two-start.html
@@ -18,6 +18,19 @@
       About your health
     </h2>
 
+    <p>
+      Thank you for completing part one.
+    </p>
+    <p>
+      Next you’ll be asked questions about any allergies, medication and your general
+      health.
+    </p>
+    <p>
+      This is to help {{ practiceName }} understand your needs.
+    </p>
+
+    <div class="content-seperator"></div>
+
     <div class="cta shunt">
       <a href="current-medication" class="button">Continue</a>
     </div>
