--- a/app/views/private_beta_v1_1/start.html
+++ b/app/views/private_beta_v1_1/start.html
@@ -42,20 +42,12 @@
       Your details
     </h2>
 
-    <h3 class="body p">You’ll need to provide:</h3>
-
-    <ul>
-      <li>your name and date of birth</li>
-      <li>your address and contact details</li>
-    </ul>
-
-    <h3 class="body p">You’ll also be asked for:</h3>
+    <h3 class="body p">You’ll be asked for information about yourself including:</h3>
 
     <ul>
       <li>the GP you’re currently registered with if you have one</li>
       <li>the name and address under which you’re registered with your current
         GP (if they’re different)</li>
-      <li>your military service number (if you have one) and enlistment date</li>
       <li>
         <details class="-inline">
           <summary>your <span class="details-cta">NHS number</span> if you know it</summary>
@@ -89,10 +81,9 @@
     </h2>
 
     <p>
-      You’ll be asked to fill in a health questionnaire which will ask about
-      any allergies, medication and your general health.
+      You’ll be asked questions about any allergies, medication and your general
+      health.
     </p>
-
     <p>
       This is to help {{ practiceName }} understand your needs.
     </p>
