--- a/app/views/private_beta_v1_1/contact-email.html
+++ b/app/views/private_beta_v1_1/contact-email.html
@@ -19,18 +19,14 @@
       <label for="email">What is your email address?</label>
     </h1>
 
-    <div class="form-group -hanging-hint">
+    <div class="form-group">
       <input autocomplete="off" type="email" id="email" name="email" value="{{ session.contact.email }}" style="float: left;">
-      <span class="form-hint">(optional)</span>
     </div>
 
     <details>
       <summary>Why should I provide an email address?</summary>
       <div class="signage">
         <div class="info">
-          <p>
-            A confirmation will be emailed to you at the end of this service.
-          </p>
           <p>
             {{ practiceName }} may need to get in touch with you to complete your registration.
           </p>
