--- a/app/views/private_beta_v1_1/contact-telephone.html
+++ b/app/views/private_beta_v1_1/contact-telephone.html
@@ -21,9 +21,8 @@
       </label>
     </h1>
 
-    <div class="form-group -hanging-hint">
+    <div class="form-group">
       <input autocomplete="off" type="tel" id="telephone" name="telephone" value="{{ session.contact.telephone }}" style="float: left;">
-      <span class="form-hint">(optional)</span>
     </div>
 
     <details>
