--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,3 +1,4 @@
+@import url("//fast.fonts.net/cssapi/4c65968f-c33e-4eb6-9a5d-ab4f81a0543f.css");
 .prototype-warning-inner, .breadcrumb, .footer-container, .-date, .error-summary, form, .form-group, #global-header, .signage, .nhsid-container, .header-container,
 .content, .grid-row {
   zoom: 1;
@@ -10,12 +11,10 @@
   clear: both;
 }
 
-/*@import url('//fast.fonts.net/cssapi/4c65968f-c33e-4eb6-9a5d-ab4f81a0543f.css');
-$family: "Neue Frutiger W01", sans-serif;*/
 body, pre.user-input,
 .body {
   color: #231f20;
-  font-family: "Frutiger Neue", "Frutiger", sans-serif;
+  font-family: "Neue Frutiger W01", sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 32px;
