Tweak language around 'previous name'

--- a/app/views/private_beta_v1_1/registered-name-details.html
+++ b/app/views/private_beta_v1_1/registered-name-details.html
@@ -14,7 +14,7 @@
   {% include "_includes/section-indicator-1.html" %}
 
   <h1 class="primary">
-    What was your previous name?
+    What is your registered name?
   </h1>
   <form method="post" class="measure">
 
